# barcode-scanner

./: .gitignore  Android.mk  README.md  artifacts.gradle  bintray.gradle  build.gradle  circle.yml  dependencies.gradle  publish-repo-android.gradle  publish.gradle  settings.gradle  writegradleprops.sh
.circleci/: config.yml
barcode-scanner/: CMakeLists.txt  build.gradle
barcode-scanner/src/main/: AndroidManifest.xml
barcode-scanner/src/main/java/com/aevi/barcode/scanner/: BarcodeObservable.java  BarcodeScanner.java  Camera2Preview.java  CameraFrameObservable.java  CameraObservable.java  CameraPreview.java  CameraScanner.java  CameraWrapper.java  CaptureSessionObservable.java  ImageObservable.java  ScanningView.java  SurfaceObservable.java  SurfaceTextureObservable.java  Tuple.java
barcode-scanner/src/test/java/com/aevi/barcode/scanner/: BaseTest.java  RxErrorHandler.java  TestCameraFrameObservable.java  TestCameraObservable.java  TestCaptureSessionObservable.java  TestImageObservable.java  TestSurfaceObservable.java  TestSurfaceTextureObservable.java
barcode-scanner/src/test/java/com/aevi/barcode/scanner/emulator/: CameraEmulator.java  ImageReaderEmulator.java  SurfaceTextureEmulator.java
barcode-scanner/src/test/java/net/sourceforge/zbar/: TestImage.java  TestImageScanner.java  TestScanImage.java
releases/: release-notes-1.0.0  release-notes-1.1.0  release-notes-2.0.0  release-notes-2.0.1
sampleApp/: build.gradle
sampleApp/src/main/: AndroidManifest.xml
sampleApp/src/main/java/com/aevi/barcode/sample/: MainActivity.java
sampleApp/src/main/res/layout/: activity_main.xml
sampleApp/src/main/res/values/: strings.xml
